--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=SIMASE
 APP_ENV=local
 APP_KEY=base64:6rwsE98M5heKXMAenqMp7BH5DnWy4iyaK4pXtWb/CSU=
 APP_DEBUG=true
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=cekdulu
-DB_USERNAME=root
-DB_PASSWORD=
+DB_HOST=educalab.id
+DB_PORT=3307
+DB_DATABASE=zoeC2W2DqeXjAvSU
+DB_USERNAME=fRyVw04BMbwBBA9f
+DB_PASSWORD=Mr7cFxI5GPVdVvlI
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
