--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@
 /public/storage
 /storage/*.key
 /vendor
-.env
 .env.backup
 .env.production
 Homestead.json
@@ -13,6 +12,7 @@ Homestead.yaml
 auth.json
 npm-debug.log
 yarn-error.log
+package-lock.json
 /.fleet
 /.idea
 /.vscode
